--- a/GoogleMyMaps.html
+++ b/GoogleMyMaps.html
@@ -1,3 +1,4 @@
 <html>
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1XmqhKrxHmeWNx-x3qqNIeU2rCrl-T7HE" width="100%" height="100%"></iframe>
 </html>
+// Link https://www.google.com/maps/d/u/0/edit?mid=1XmqhKrxHmeWNx-x3qqNIeU2rCrl-T7HE&usp=sharing
